--- a/CREATEWEB_101/UDEMY/MYPROJECT/01_CLICK2COPY/index.html
+++ b/CREATEWEB_101/UDEMY/MYPROJECT/01_CLICK2COPY/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h3>คลิกเพื่อคัดลอกข้อความ</h3>
+        <h3>คลิกเพื่อคัดลอกรหัสคูปอง</h3>
         <input type="text" class="coupon" value="TEST1402">
         <button class="btn">คัดลอก</button>
     </div>
