--- a/udemy/js_building_20_project/my_project/04_increment_counter/index.html
+++ b/udemy/js_building_20_project/my_project/04_increment_counter/index.html
@@ -23,5 +23,6 @@
         <div class="counter" data-target="10000">0</div>
         <span>Instagram Followers</span>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
