--- a/udemy/js_building_20_project/my_project/05_modal_and_popup/index.html
+++ b/udemy/js_building_20_project/my_project/05_modal_and_popup/index.html
@@ -15,5 +15,6 @@
             <button class="close-btn">close</button>
         </div>
     </section>
+    <script src="app.js"></script>
 </body>
 </html>
