--- a/other/udemy/js_building_20_project/my_project/07_vowels_counting/index.html
+++ b/other/udemy/js_building_20_project/my_project/07_vowels_counting/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="conatiner">
+    <div class="container">
         <h1>Count the vowels (AEIOU)</h1>
         <span class="count">0</span>
         <input type="text" placeholder="Enter text">
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
