--- a/other/udemy/js_building_20_project/my_project/13_sound_board/index.html
+++ b/other/udemy/js_building_20_project/my_project/13_sound_board/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sound Board</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <audio src="sounds/Effect1.wav" id="Effect1"></audio>
@@ -11,5 +12,9 @@
     <audio src="sounds/Effect3.wav" id="Effect3"></audio>
     <audio src="sounds/Effect4.wav" id="Effect4"></audio>
     <audio src="sounds/Effect5.wav" id="Effect5"></audio>
+
+    <div id="controller"></div>
+
+    <script src="app.js"></script>
 </body>
 </html>
