--- a/udemy/js_building_20_project/my_project/18_random_image/index.html
+++ b/udemy/js_building_20_project/my_project/18_random_image/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Random Image Unsplash API</h1>
     <div class="container"></div>
+    <script src="app.js"></script>
 </body>
 </html>
