--- a/udemy/js_building_20_project/my_project/18_random_image/index.html
+++ b/udemy/js_building_20_project/my_project/18_random_image/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Image Unsplash API</title>
+    <title>RandomImage Unsplash API</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Random Image Unsplash API</h1>
+    <h1>RandomImage Unsplash API</h1>
     <div class="container"></div>
     <script src="app.js"></script>
 </body>
