--- a/.other/.udemy/js_building_20_project/my_project/20_bmi_calculator/index.html
+++ b/.other/.udemy/js_building_20_project/my_project/20_bmi_calculator/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMI Calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -19,6 +20,8 @@
             </div>
             <button class="btn">Calculate</button>
         </form>
+        <p class="result"></p>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
