--- a/kmitl/y2/s2/web_app/activity/act05/index.html
+++ b/kmitl/y2/s2/web_app/activity/act05/index.html
@@ -35,11 +35,10 @@
         drama drama drama<br>
         drama drama Fri 7,2020
     </p>
-    <p>
     <table style="width: 500px; text-align: center;">
         <tr>
             <td>
-                <img src="wizard cat.jpg" alt="image's description bla bla" width="500">
+                <img src="wizard cat.jpg" alt="A wizard cat illustration" width="500">
             </td>
         </tr>
         <tr>
@@ -48,8 +47,6 @@
             </td>
         </tr>
     </table>
-
-    </p>
     <p>image's description bla bla</p>
     <p>
         drama drama drama<br>
