--- a/kmitl/y2/s2/web_app/activity/act05/act05_1/index.html
+++ b/kmitl/y2/s2/web_app/activity/act05/act05_1/index.html
@@ -38,7 +38,7 @@
     <table style="width: 500px; text-align: center;">
         <tr>
             <td>
-                <img src="wizard cat.jpg" alt="A wizard cat illustration" width="500">
+                <img src="img.jpg" alt="shutterstock" width="500">
             </td>
         </tr>
         <tr>
