--- a/kmitl/y2/s2/web_app/activity/act05/act05_1/index.html
+++ b/kmitl/y2/s2/web_app/activity/act05/act05_1/index.html
@@ -12,7 +12,7 @@
     <p>Life of students who study Software studio.</p>
     <p>reported by Mr.XxX</p>
 
-    <h2>Contents</h2>
+    <h2 id="contents">Contents</h2>
     <ul>
         <li><a href="#introduction">Introduction</a></li>
         <li><a href="#drama1">Drama 1</a></li>
