--- a/kmitl/y2/s2/web_app/activity/act05/act05_1/index.html
+++ b/kmitl/y2/s2/web_app/activity/act05/act05_1/index.html
@@ -64,7 +64,7 @@
     </p>
     <a href="#contents">back to Contents</a>
 
-    <p>© c.kmitl all rights reserved & copyright 2020</p>
+    <p>ce.kmitl all rights reserved & copyright 2020</p>
 </body>
 
 </html>
