--- a/kmitl/y2/s2/web_app/activity/act05/act05_1/index.html
+++ b/kmitl/y2/s2/web_app/activity/act05/act05_1/index.html
@@ -12,7 +12,7 @@
     <p>Life of students who study Software studio.</p>
     <p>reported by Mr.XxX</p>
 
-    <h2 id="contents">Contents</h2>
+    <h2 id="content">Contents</h2>
     <ul>
         <li><a href="#introduction">Introduction</a></li>
         <li><a href="#drama1">Drama 1</a></li>
@@ -27,7 +27,7 @@
         intro intro intro intro<br>
         intro intro intro intro
     </p>
-    <a href="#contents">back to Contents</a>
+    <a href="#content">back to Content</a>
 
     <h2 id="drama1">Drama 1</h2>
     <p>
@@ -54,7 +54,7 @@
         drama drama drama<br>
         drama drama drama
     </p>
-    <a href="#contents">back to Contents</a>
+    <a href="#content">back to Content</a>
 
     <h2 id="conclusion">Conclusion</h2>
     <p>
@@ -62,7 +62,7 @@
         conclusion 2<br>
         conclusion 3
     </p>
-    <a href="#contents">back to Contents</a>
+    <a href="#content">back to Content</a>
 
     <p>ce.kmitl all rights reserved & copyright 2020</p>
 </body>
