--- a/kmitl/y2/s2/web_app/activity/act05/act05_2/66010483_502.html
+++ b/kmitl/y2/s2/web_app/activity/act05/act05_2/66010483_502.html
@@ -31,7 +31,7 @@
             <fieldset>
                 <legend><em>Tiebreaker Question</em></legend>
                 <label for="tiebreaker">In 25 words or less, say why you would like to win $10,000:</label><br>
-                <textarea id="tiebreaker" name="tiebreaker" maxlength="250" required></textarea><br>
+                <textarea id="tiebreaker" cols="35" rows="10" name="tiebreaker" maxlength="250" required></textarea><br>
             </fieldset>
 
             <fieldset>
