--- a/kmitl/y2/s2/web_app/activity/act14/Activity14.html
+++ b/kmitl/y2/s2/web_app/activity/act14/Activity14.html
@@ -89,6 +89,9 @@
         personalLink.href = "#";
         personalInfo.appendChild(personalLink);
         container.appendChild(personalInfo);
+
+        personalInfo.style.paddingTop = "20px"
+        personalInfo.style.paddingBottom = "10px"
     
         // สร้าง container สำหรับแสดงข้อมูลเพิ่มเติมเมื่อคลิก
         const infoContainer = document.createElement("div");
